# RobotControl

./: .gitignore
test/chapt1/demo_cpp_pkg/: CMakeLists.txt  package.xml
test/chapt1/demo_cpp_pkg/src/: cpp_node.cpp
test/chapt2/demo_topic/: CMakeLists.txt  package.xml
test/chapt2/demo_topic/install/: local_setup.sh  setup.sh
test/chapt2/demo_topic/install/demo_topic/lib/demo_topic/: turtle_circle  turtle_control
test/chapt2/demo_topic/log/: latest_build
test/chapt2/demo_topic/src/: turtle_circle.cpp  turtle_control.cpp
test/chapt2/topic_practice/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test/chapt2/topic_practice/log/: latest_build
test/chapt2/topic_practice/src/status_display/: CMakeLists.txt
test/chapt2/topic_practice/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
test/chapt2/topic_practice/src/status_interfaces/: CMakeLists.txt
test/chapt2/topic_practice/src/status_interfaces/msg/: SystemStatus.msg
test/chapt2/topic_practice/src/status_publisher/: package.xml  setup.py
test/chapt3/service_interfaces/srv/: Patrol.srv
test/chapt3/src/demo_service/: CMakeLists.txt  package.xml
test/chapt3/src/demo_service/launch/: demo.launch.py
test/chapt3/src/demo_service/src/: patrol_client.cpp  turtle_control.cpp
test/chapt3/src/service_interfaces/: CMakeLists.txt  package.xml
test/chapt3/src/service_interfaces/srv/: Patrol.srv
test/chapt4/src/demo_tf/: CMakeLists.txt  package.xml
test/chapt4/src/demo_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
test/chapt5/src/fishbot_description/: CMakeLists.txt  package.xml
test/chapt5/src/fishbot_description/config/: display_robot_model.rviz
test/chapt5/src/fishbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
test/chapt5/src/fishbot_description/urdf/: first_robot.urdf  first_robot.xacro
test/chapt5/src/fishbot_description/urdf/fishbot/: base.urdf.xacro  fishbot.urdf.xacro
test/chapt5/src/fishbot_description/world/: custom_room.world
(+31 files in other folders)
